--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,17 +10,17 @@ License: CC0
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    tidyr,
-    dplyr,
-    purrr,
-    tibble,
-    ggplot2,
-    stringr,
-    rlang,
-    lubridate,
-    rvest,
-    magrittr
+    tidyr (>= 0.8.1),
+    dplyr (>= 0.7.6),
+    purrr (>= 0.2.5),
+    tibble (>= 1.4.2),
+    ggplot2 (>= 3.0.0),
+    stringr (>= 1.3.1),
+    rlang (>= 0.2.1),
+    lubridate (>= 1.7.4),
+    rvest (>= 0.3.2),
+    magrittr (>= 1.5)
 Suggests: 
-    progress
+    progress (>= 1.2.0)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
