--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     rlang (>= 0.2.1),
     lubridate (>= 1.7.4),
     rvest (>= 0.3.2),
-    magrittr (>= 1.5)
+    magrittr (>= 1.5),
+    scales (>= 0.5.0)
 Suggests: 
     progress (>= 1.2.0)
 Roxygen: list(markdown = TRUE)
