--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: fvoa
 Type: Package
+Package: fvoa
 Title: Frech-Adjusted Value Over Average for Fantasy Football
 Version: 0.0.0.9000
 Author: Scott Frechette <scottfrechette@gmail.com>
@@ -7,21 +7,21 @@ Maintainer: Scott Frechette <scottfrechette@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: CC0
-Encoding: UTF-8
-LazyData: true
 Imports: 
-    tidyr (>= 0.8.1),
     dplyr (>= 0.7.6),
-    purrr (>= 0.2.5),
-    tibble (>= 1.4.2),
     ggplot2 (>= 3.0.0),
-    stringr (>= 1.3.1),
-    rlang (>= 0.2.1),
     lubridate (>= 1.7.4),
-    rvest (>= 0.3.2),
     magrittr (>= 1.5),
-    scales (>= 0.5.0)
+    purrr (>= 0.2.5),
+    rlang (>= 0.2.1),
+    rvest (>= 0.3.2),
+    scales (>= 0.5.0),
+    stringr (>= 1.3.1),
+    tibble (>= 1.4.2),
+    tidyr (>= 0.8.1)
 Suggests: 
     progress (>= 1.2.0)
+Encoding: UTF-8
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
