--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Imports:
     ggplot2 (>= 3.0.0),
     lubridate (>= 1.7.4),
     magrittr (>= 1.5),
-    purrr (>= 0.2.5),
+    purrr,
     rlang (>= 0.2.1),
     rvest (>= 0.3.2),
     scales (>= 0.5.0),
@@ -20,8 +20,10 @@ Imports:
     tibble (>= 1.4.2),
     tidyr (>= 0.8.1)
 Suggests: 
-    progress (>= 1.2.0)
+    ggridges,
+    progress (>= 1.2.0),
+    testthat
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
