--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,4 +26,6 @@ Suggests:
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
+Depends: 
+    R (>= 2.10)
