--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,11 @@ Maintainer: Scott Frechette <scottfrechette@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: CC0
+Depends: 
+    R (>= 2.10),
+    tidyverse (>= 1.3),
+    rvest (>= 0.3),
+    jsonlite (>= 1.7)
 Imports: 
     dplyr (>= 0.7.6),
     ggplot2 (>= 3.0.0),
@@ -27,5 +32,3 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
-Depends: 
-    R (>= 2.10)
