--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,7 @@ Description: Package that scrapes fantasy information from ESPN and Yahoo Fantas
 License: CC0
 Depends: 
     R (>= 2.10),
-    tidyverse (>= 1.3),
-    rvest (>= 0.3),
-    jsonlite (>= 1.7)
+    tidyverse (>= 1.3)
 Imports: 
     dplyr (>= 0.7.0),
     ggplot2 (>= 3.0.0),
@@ -32,4 +30,4 @@ Suggests:
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
