Final upgrades for FVOA 1.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(evaluate_lineup)
 export(evaluate_model)
 export(evaluate_team_accuracy)
 export(evaluate_tiers)
+export(extract_projections)
 export(extract_scores)
 export(joy_plots)
 export(plot_exp_wpct)
