Update simulation and playoff leverage functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,8 +34,9 @@ export(scrape_player_projections)
 export(scrape_schedule)
 export(scrape_team)
 export(scrape_win_prob)
-export(simulate_ranking)
-export(simulate_record)
-export(simulate_season)
+export(simulate_final_standings)
+export(simulate_season_scores)
+export(simulate_season_standings)
+export(spread_league)
 export(theme_fvoa)
 importFrom(magrittr,"%>%")
