Updating all scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(evaluate_team_accuracy)
 export(evaluate_tiers)
 export(extract_projections)
 export(extract_scores)
+export(fit_model)
 export(joy_plots)
 export(plot_exp_wpct)
 export(plot_fvoa)
@@ -34,8 +35,9 @@ export(scrape_player_projections)
 export(scrape_schedule)
 export(scrape_team)
 export(scrape_win_prob)
-export(simulate_ranking)
-export(simulate_record)
-export(simulate_season)
+export(simulate_final_standings)
+export(simulate_season_scores)
+export(simulate_season_standings)
+export(spread_league)
 export(theme_fvoa)
 importFrom(magrittr,"%>%")
