--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(fit_model)
 export(plot_boxplots)
 export(plot_exp_wpct)
 export(plot_fvoa)
+export(plot_h2h_matchup)
 export(plot_joy_plots)
 export(plot_matchups)
 export(plot_matchups_hm)
@@ -28,9 +29,9 @@ export(plot_playoff_leverage)
 export(plot_pos_contribution)
 export(plot_quadrant)
 export(plot_scores)
-export(plot_sim_matchup)
 export(plot_simulation)
 export(plot_team_evaluation)
+export(plot_wpag)
 export(scrape_player_projections)
 export(scrape_schedule)
 export(scrape_team)
