--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plot_exp_wpct)
 export(plot_fvoa)
 export(plot_h2h_matchup)
 export(plot_joy_plots)
+export(plot_manager_evaluation)
 export(plot_matchups)
 export(plot_matchups_hm)
 export(plot_model_eval_calibration)
@@ -30,7 +31,6 @@ export(plot_pos_contribution)
 export(plot_quadrant)
 export(plot_scores)
 export(plot_simulation)
-export(plot_team_evaluation)
 export(plot_wpag)
 export(scrape_player_projections)
 export(scrape_schedule)
