--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,9 @@ export(plot_playoff_leverage)
 export(plot_pos_contribution)
 export(plot_quadrant)
 export(plot_scores)
+export(plot_simulated_cumulative_points)
+export(plot_simulated_weekly_points)
+export(plot_simulated_wins)
 export(plot_simulation)
 export(plot_wpag)
 export(scrape_player_projections)
