--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(compare_teams)
 export(evaluate_brier)
 export(evaluate_lineup)
 export(evaluate_model)
+export(evaluate_projections)
 export(evaluate_team_accuracy)
 export(evaluate_tiers)
 export(extract_projections)
@@ -28,12 +29,14 @@ export(plot_model_eval_calibration)
 export(plot_model_eval_weekly)
 export(plot_playoff_leverage)
 export(plot_pos_contribution)
+export(plot_projection_eval)
 export(plot_quadrant)
 export(plot_scores)
 export(plot_simulated_cumulative_points)
 export(plot_simulated_weekly_points)
 export(plot_simulated_wins)
 export(plot_simulation)
+export(plot_team_fvoa)
 export(plot_wpag)
 export(scrape_player_projections)
 export(scrape_schedule)
