Create object to run model on each week for downstream functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,8 @@ export(evaluate_team_accuracy)
 export(evaluate_tiers)
 export(extract_projections)
 export(extract_scores)
-export(fit_model)
+export(fit_team)
+export(fit_team_season)
 export(plot_boxplots)
 export(plot_exp_wpct)
 export(plot_fvoa)
@@ -43,6 +44,7 @@ export(scrape_schedule)
 export(scrape_team)
 export(scrape_win_prob)
 export(simulate_final_standings)
+export(simulate_final_standings_season)
 export(simulate_season_scores)
 export(simulate_season_standings)
 export(spread_league)
