--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,8 +32,11 @@ export(plot_playoff_leverage)
 export(plot_pos_contribution)
 export(plot_projection_eval)
 export(plot_quadrant)
+export(plot_schedule_luck)
 export(plot_scores)
 export(plot_simulated_cumulative_points)
+export(plot_simulated_points)
+export(plot_simulated_rank)
 export(plot_simulated_weekly_points)
 export(plot_simulated_wins)
 export(plot_simulation)
