Update point vs wp visual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%>%")
 export(calculate_fvoa_season)
-export(calculate_quadrants)
 export(calculate_rankings)
 export(compare_current_matchups)
 export(compare_league)
@@ -29,9 +28,9 @@ export(plot_matchups_hm)
 export(plot_model_eval_calibration)
 export(plot_model_eval_weekly)
 export(plot_playoff_leverage)
+export(plot_points_luck)
 export(plot_pos_contribution)
 export(plot_projection_eval)
-export(plot_quadrant)
 export(plot_schedule_luck)
 export(plot_scores)
 export(plot_simulated_cumulative_points)
