Update lineup evaluation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(plot_exp_wpct)
 export(plot_fvoa)
 export(plot_h2h_matchup)
 export(plot_joy_plots)
-export(plot_manager_evaluation)
 export(plot_matchups)
 export(plot_matchups_hm)
 export(plot_model_eval_calibration)
@@ -30,7 +29,9 @@ export(plot_model_eval_weekly)
 export(plot_playoff_leverage)
 export(plot_points_luck)
 export(plot_pos_contribution)
+export(plot_projected_margin)
 export(plot_projection_eval)
+export(plot_roster_skills)
 export(plot_schedule_luck)
 export(plot_scores)
 export(plot_simulated_cumulative_points)
