Lots of changes to plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(plot_joy_plots)
 export(plot_matchups)
 export(plot_matchups_hm)
 export(plot_model_eval_calibration)
+export(plot_model_eval_team)
 export(plot_model_eval_weekly)
 export(plot_playoff_leverage)
 export(plot_points_luck)
