--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,17 +16,21 @@ Imports:
     ggplot2 (>= 3.0.0),
     lubridate (>= 1.7.0),
     magrittr (>= 1.5),
+    rstanarm,
     purrr (>= 0.3.0),
     rlang (>= 0.2.0),
     rvest (>= 0.3.0),
     scales (>= 0.5.0),
     stringr (>= 1.3.0),
     tibble (>= 1.4.0),
-    tidyr (>= 0.8.0)
+    tidyr (>= 0.8.0),
+    tidybayes,
+    ffsched,
+    ggrepel,
+    ggtext,
+    ffscrapr,
+    jsonlite
 Suggests: 
-    furrr (>= 0.1.0),
-    ggridges (>= 0.5.0),
-    progress (>= 1.2.0),
     testthat (>= 2.3.0)
 Encoding: UTF-8
 LazyData: true
