--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,13 +25,13 @@ Imports:
     tibble (>= 1.4.0),
     tidyr (>= 0.8.0),
     tidybayes,
-    ffsched,
     ggrepel,
     ggtext,
     ffscrapr,
     jsonlite
 Suggests: 
-    testthat (>= 2.3.0)
+    testthat (>= 2.3.0),
+    ffsched
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
