--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,6 @@ Imports:
     ggplot2 (>= 3.0.0),
     lubridate (>= 1.7.0),
     magrittr (>= 1.5),
-    rstanarm,
     purrr (>= 0.3.0),
     rlang (>= 0.2.0),
     rvest (>= 0.3.0),
@@ -24,14 +23,15 @@ Imports:
     stringr (>= 1.3.0),
     tibble (>= 1.4.0),
     tidyr (>= 0.8.0),
-    tidybayes,
     ggrepel,
     ggtext,
-    ffscrapr,
     jsonlite
 Suggests: 
     testthat (>= 2.3.0),
-    ffsched
+    ffsched,
+    ffscrapr,
+    rstanarm,
+    tiybayes
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
