--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,13 +23,13 @@ Imports:
     stringr (>= 1.3.0),
     tibble (>= 1.4.0),
     tidyr (>= 0.8.0),
-    ggrepel,
-    ggtext,
-    jsonlite
+    ggrepel
 Suggests: 
     testthat (>= 2.3.0),
+    jsonlite,
     ffsched,
     ffscrapr,
+    ggtext,
     rstanarm,
     tiybayes
 Encoding: UTF-8
