--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,7 +51,7 @@ export(plot_simulated_weekly_points)
 export(plot_simulated_wins)
 export(plot_simulation)
 export(plot_team_fvoa)
-export(plot_wpag)
+export(plot_wp_allplay)
 export(simulate_final_standings)
 export(simulate_final_standings_season)
 export(simulate_season_scores)
